--- a/Secao02-css3/Flexbox-em-CSS/01-display-flex.html
+++ b/Secao02-css3/Flexbox-em-CSS/01-display-flex.html
@@ -33,6 +33,9 @@
         <div class="item">item 8</div>
         <div class="item">item 9</div>
         <div class="item">item 10</div>
+        <div class="item">item 11</div>
+        <div class="item">item 12</div>
+        <div class="item">item 13</div>
     </div>
 </body>
 
